--- a/tmux/guide.conf
+++ b/tmux/guide.conf
@@ -25,7 +25,7 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+# set -g mouse on
 
 # don't rename windows automatically
 set-option -g allow-rename off
